Pantallas agregadas sin contenido

--- a/FrontEnd/src/app/cliente/cliente.component.html
+++ b/FrontEnd/src/app/cliente/cliente.component.html
@@ -5,75 +5,81 @@
     <div id="wrapper">
 
       <!-- Sidebar -->
-      <ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar">
+      <ul class="navbar-nav bg-gradient-info sidebar sidebar-dark accordion" id="accordionSidebar">
 
         <!-- Sidebar - Brand -->
-        <a class="sidebar-brand d-flex align-items-center justify-content-center">
+        <a class="sidebar-brand d-flex align-items-center justify-content-center" href="index.html">
           <div class="sidebar-brand-icon rotate-n-15">
-            <i class="fas fa-laugh-wink"></i>
+            <i class="fas fad fa-utensils"></i>
           </div>
-          <div class="sidebar-brand-text mx-3">Cliente</div>
+          <div class="sidebar-brand-text mx-3">Cliente/NutriTEC</div>
         </a>
 
+        <li class="nav-item">
+          <a id='home' class="nav-link collapsed" data-toggle="collapse" data-target="#gestSucC" aria-expanded="false"
+             aria-controls="gestSucC" (click)="mostrarPantalla('principal')">
+            <i class="fa-regular fa-building"></i>
+            <span>Home</span>
+          </a>
+        </li>
         <!-- Divider -->
         <hr class="sidebar-divider my-0">
 
+
+        <!-- Divider -->
+        <hr class="sidebar-divider">
+
         <!-- Heading -->
         <div class="sidebar-heading">
-          Clases
+          Funciones Mixtas
         </div>
 
+
         <li class="nav-item">
-          <a class="nav-link collapsed" data-toggle="collapse" data-target="#gestSucC" aria-expanded="false"
-             aria-controls="gestSucC" (click)="cambiarPantalla('principal')">
-            <i class="fas fa-thin fa-house"></i>
-            <span>Main</span>
+          <a class="nav-link collapsed" data-toggle="collapse"
+             (click)="mostrarPantalla('registroDeMedidas')">
+            <i class="fas fa-solid fa-ruler"></i>
+            <span>Registro de Medidas</span>
           </a>
         </li>
 
         <li class="nav-item">
-          <a id='home' class="nav-link collapsed" data-toggle="collapse" data-target="#gestSucC" aria-expanded="false"
-             aria-controls="gestSucC"(click)="cambiarPantalla('busqueda')">
-            <i class="fas fa-duotone fa-dumbbell"></i>
-            <span>Registro de medidas</span>
-          </a>
-        </li>
-
-        <li class="nav-item">
-          <a id='home' class="nav-link collapsed" data-toggle="collapse" data-target="#gestSucC" aria-expanded="false"
-             aria-controls="gestSucC"(click)="cambiarPantalla('busqueda')">
-            <i class="fas fa-duotone fa-dumbbell"></i>
+          <a class="nav-link collapsed" data-toggle="collapse"
+             (click)="mostrarPantalla('registroDiarioDeConsumo')">
+            <i class="fas fa-regular fa-address-card"></i>
             <span>Registro diario de consumo</span>
           </a>
         </li>
 
         <li class="nav-item">
-          <a id='home' class="nav-link collapsed" data-toggle="collapse" data-target="#gestSucC" aria-expanded="false"
-             aria-controls="gestSucC"(click)="cambiarPantalla('busqueda')">
-            <i class="fas fa-duotone fa-dumbbell"></i>
-            <span>Gestión de productos/platillos</span>
+          <a class="nav-link collapsed" data-toggle="collapse"
+             (click)="mostrarPantalla('gestionDeProductosPlatillos')">
+            <i class="fas fa-brands fa-product-hunt"></i>
+            <span> Gestión de productos/platillos</span>
           </a>
         </li>
 
         <li class="nav-item">
-          <a id='home' class="nav-link collapsed" data-toggle="collapse" data-target="#gestSucC" aria-expanded="false"
-             aria-controls="gestSucC"(click)="cambiarPantalla('busqueda')">
-            <i class="fas fa-duotone fa-dumbbell"></i>
-            <span>Gestión de Recetas</span>
+          <a class="nav-link collapsed" data-toggle="collapse"
+             (click)="mostrarPantalla('gestionDeRecetas')">
+            <i class="fas fa-solid fa-stroopwafel"></i>
+            <span> Gestión de Recetas</span>
           </a>
         </li>
 
         <li class="nav-item">
-          <a id='home' class="nav-link collapsed" data-toggle="collapse" data-target="#gestSucC" aria-expanded="false"
-             aria-controls="gestSucC"(click)="cambiarPantalla('busqueda')">
-            <i class="fas fa-duotone fa-dumbbell"></i>
-            <span>Reporte de Avance</span>
+          <a class="nav-link collapsed" data-toggle="collapse"
+             (click)="mostrarPantalla('reporteDeAvances')">
+            <i class="fas fa-solid fa-file-invoice"></i>
+            <span> Reporte de Avance</span>
           </a>
         </li>
+
+        <!-- solo esas pantallas para admin :D -->
 
 
         <!-- Divider -->
-        <hr class="sidebar-divider d-none d-md-block">
+        <hr class="sidebar-divider">
 
         <!-- Sidebar Toggler (Sidebar) -->
         <div class="text-center d-none d-md-inline">
@@ -116,7 +122,7 @@
                     Profile
                   </a>
                   <div class="dropdown-divider"></div>
-                  <a class="dropdown-item" data-toggle="modal" data-target="#logoutModal" (click)="logout()">
+                  <a class="dropdown-item" data-toggle="modal" data-target="#logoutModal">
                     <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i>
                     Logout
                   </a>
@@ -128,7 +134,27 @@
           </nav>
           <!-- End of Topbar -->
 
-          <!-- Begin Page Content -->
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+          <!-- AQUI COMIENZAN LAS PANTALLAS -->
+          <!--------------------------------------------- COMIENZA PANTALLA PRINCIPAL --------------------------------------------->
           <div id="principal">
             <div class="container-fluid">
               <!-- Page Heading -->
@@ -143,13 +169,15 @@
                       <div class="row no-gutters align-items-center">
                         <div class="col mr-2">
                           <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">
-                            Total de Estudiantes</div>
+                            Total de Estudiantes
+                          </div>
                           <div class="h5 mb-0 font-weight-bold text-gray-800">
                             140
                           </div>
                         </div>
                         <div class="col-auto">
-                          <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-person-fill" viewBox="0 0 20 20">
+                          <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor"
+                               class="bi bi-person-fill" viewBox="0 0 20 20">
                             <path d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H3Zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6Z"/>
                           </svg>
                         </div>
@@ -159,6 +187,7 @@
                 </div>
               </div>
 
+
               <div class="card shadow mb-4">
                 <div class="card-header py-3">
                   <h6 class="m-0 font-weight-bold text-primary">Clases Impartidas</h6>
@@ -166,129 +195,129 @@
                 <div class="card-body">
                   <h4 class="small font-weight-bold">Indoor Cycling <span class="float-right"></span></h4>
                   <div class="progress mb-4">
-                    <div class="progress-bar bg-danger" role="progressbar" style="width: 100%" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100"></div>
+                    <div class="progress-bar bg-danger" role="progressbar" style="width: 100%" aria-valuenow="20"
+                         aria-valuemin="0" aria-valuemax="100"></div>
                   </div>
                   <h4 class="small font-weight-bold">Pilates <span class="float-right"></span></h4>
                   <div class="progress mb-4">
-                    <div class="progress-bar bg-warning" role="progressbar" style="width: 100%" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100"></div>
+                    <div class="progress-bar bg-warning" role="progressbar" style="width: 100%" aria-valuenow="40"
+                         aria-valuemin="0" aria-valuemax="100"></div>
                   </div>
                   <h4 class="small font-weight-bold">Yoga <span class="float-right"></span></h4>
                   <div class="progress mb-4">
-                    <div class="progress-bar" role="progressbar" style="width: 100%" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
+                    <div class="progress-bar" role="progressbar" style="width: 100%" aria-valuenow="60"
+                         aria-valuemin="0" aria-valuemax="100"></div>
                   </div>
                   <h4 class="small font-weight-bold">Zumba <span class="float-right"></span></h4>
                   <div class="progress mb-4">
-                    <div class="progress-bar bg-info" role="progressbar" style="width: 100%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+                    <div class="progress-bar bg-info" role="progressbar" style="width: 100%" aria-valuenow="80"
+                         aria-valuemin="0" aria-valuemax="100"></div>
                   </div>
                   <h4 class="small font-weight-bold">Natación <span class="float-right"></span></h4>
                   <div class="progress">
-                    <div class="progress-bar bg-success" role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
+                    <div class="progress-bar bg-success" role="progressbar" style="width: 100%" aria-valuenow="100"
+                         aria-valuemin="0" aria-valuemax="100"></div>
                   </div>
                 </div>
-              </div>
+              </div> -->
 
             </div> <!-- termina el page content -->
           </div>
-
-          <div id="busqueda" class="container-fluid">
-            <h1 class="h3 mb-4 text-gray-800">Búsqueda de Clases</h1>
-
-            <div class="form-group row">
-              <div class="col-sm-6 mb-3 mb-sm-0">
-                <input type="date" class="form-control form-control-user" id="busquedafechaInicio">
-                <label for="busquedafechaInicio">Fecha de Inicio</label>
-              </div>
-              <div class="col-sm-6">
-                <input type="date" class="form-control form-control-user" id="busquedafechaFinaliza">
-                <label for="busquedafechaFinaliza">Fecha de Finalización</label>
-              </div>
-              <div class="col-sm-6">
-                <select class="form-control form-control-user" id="busquedasede"></select>
-                <label for="busquedasede">Sede</label>
-              </div>
-              <div class="col-sm-6">
-                <select class="form-control form-control-user" id="busquedatipoDeClase"></select>
-                <label for="busquedatipoDeClase">Tipo de clase</label>
-              </div>
-              <div class="col-sm">
-                <textarea class="form-control form-control-user" id="busquedaResultado" rows="4"
-                          cols="50" readonly></textarea>
-                <label for="busquedaResultado">Resultado</label>
-              </div>
+          <!--------------------------------------------- TERMINA PANTALLA PRINCIPAL --------------------------------------------->
 
 
+
+
+          <!--------------------------------------------- COMIENZA PANTALLA Registro de Medidas: --------------------------------------------->
+          <div id="registroDeMedidas">
+            Esta es la pantalla de Registro de Medidas:
+          </div>
+          <!--------------------------------------------- TERMINA PANTALLA Registro de Medidas: --------------------------------------------->
+
+
+
+
+          <!--------------------------------------------- COMIENZA PANTALLA Registro diario de consumo: --------------------------------------------->
+          <div id="registroDiarioDeConsumo">
+            Esta es la pantalla de Registro diario de consumo:
+          </div>
+          <!--------------------------------------------- TERMINA PANTALLA Registro diario de consumo: --------------------------------------------->
+
+
+
+
+          <!--------------------------------------------- COMIENZA PANTALLA Gestión de productos/platillos: --------------------------------------------->
+          <div id="gestionDeProductosPlatillos">
+            Esta es la pantalla de Gestión de productos/platillos:
+          </div>
+          <!--------------------------------------------- TERMINA PANTALLA Gestión de productos/platillos: --------------------------------------------->
+
+
+
+
+          <!--------------------------------------------- COMIENZA PANTALLA Gestión de Recetas:  --------------------------------------------->
+          <div id="gestionDeRecetas">
+            Esta es la pantalla de Gestión de Recetas:
+          </div>
+          <!--------------------------------------------- TERMINA PANTALLA Gestión de Recetas:  --------------------------------------------->
+
+
+
+
+
+          <!--------------------------------------------- COMIENZA PANTALLA Reporte de Avance:  --------------------------------------------->
+          <div id="reporteDeAvances">
+            Esta es la pantalla de Reporte de Avance:
+          </div>
+          <!--------------------------------------------- TERMINA PANTALLA Reporte de Avance:  --------------------------------------------->
+
+
+          <!-- AQUI COMIENZAN LAS PANTALLAS -->
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+          <!-- Footer -->
+          <footer class="sticky-footer bg-white">
+            <div class="container my-auto">
+              <div class="copyright text-center my-auto">
+                <span>Copyright &copy; GymTEC 2023</span>
+              </div>
             </div>
-
-            <a class="btn btn-outline-primary btn-user btn-block" (click)="buscarClases()">
-              Buscar
-            </a>
-
-            <br><br>
-            <hr class="sidebar-divider my-0">
-            <hr class="sidebar-divider">
-            <h1 class="h3 mb-4 text-gray-800">Registrarse a clase</h1>
-            <div class="form-group row">
-
-              <div class="col-sm">
-                <select class="form-control form-control-user" id="registroAClase"></select>
-                <label for="registroAClase">Clase con cupo a la que registrarse</label>
-              </div>
-
-              <a class="btn btn-outline-primary btn-user btn-block">
-                Registrarse
-              </a>
-
-          </div>
-
-
-
-          <div id="registro" class="container-fluid">
-            <h1 class="h3 mb-4 text-gray-800" id="registroName"></h1>
-          </div>
-          <!-- /.container-fluid -->
+          </footer>
+          <!-- End of Footer -->
 
         </div>
-        <!-- End of Main Content -->
-
-        <!-- Footer -->
-        <footer class="sticky-footer bg-white">
-          <div class="container my-auto">
-            <div class="copyright text-center my-auto">
-              <span>Copyright &copy; GymTEC 2023</span>
-            </div>
-          </div>
-        </footer>
-        <!-- End of Footer -->
+        <!-- End of Content Wrapper -->
 
       </div>
-      <!-- End of Content Wrapper -->
+      <!-- End of Page Wrapper -->
 
-    </div>
-    <!-- End of Page Wrapper -->
-
-    <!-- Scroll to Top Button-->
-    <a class="scroll-to-top rounded" href="#page-top">
-      <i class="fas fa-angle-up"></i>
-    </a>
-
-    <!-- Logout Modal-->
-    <div class="modal fade" id="logoutModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
-         aria-hidden="true">
-      <div class="modal-dialog" role="document">
-        <div class="modal-content">
-          <div class="modal-header">
-            <h5 class="modal-title" id="exampleModalLabel">Ready to Leave?</h5>
-            <button class="close" type="button" data-dismiss="modal" aria-label="Close">
-              <span aria-hidden="true">×</span>
-            </button>
-          </div>
-          <div class="modal-body">Select "Logout" below if you are ready to end your current session.</div>
-          <div class="modal-footer">
-            <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
-            <a class="btn btn-primary" href="login.html">Logout</a>
-          </div>
-        </div>
-      </div>
+      <!-- Scroll to Top Button-->
+      <a class="scroll-to-top rounded" href="#page-top">
+        <i class="fas fa-angle-up"></i>
+      </a>
     </div>
   </div>
 </div>
