--- a/FrontEnd/src/app/cliente/cliente.component.html
+++ b/FrontEnd/src/app/cliente/cliente.component.html
@@ -230,7 +230,43 @@
 
           <!--------------------------------------------- COMIENZA PANTALLA Registro de Medidas: --------------------------------------------->
           <div id="registroDeMedidas">
-            Esta es la pantalla de Registro de Medidas:
+            <div class="container-fluid">
+              <h1 class="h1 mb-4 text-gray-800">Registro de Medidas</h1>
+              <div class="form-group row">
+                <input type="date" class="form-control form-control-user" id="registroDeMedidasFECHA">
+                <label for="registroDeMedidasFECHA">Fecha</label>
+              </div>
+
+              <div class="form-group row">
+                <div class="col-sm">
+                  <input type="number" class="form-control form-control-user" id="registroDeMedidasCINTURA">
+                  <label for="registroDeMedidasCINTURA">Cintura</label>
+                </div>
+
+                <div class="col-sm">
+                  <input type="number" class="form-control form-control-user" id="registroDeMedidasCUELLO">
+                  <label for="registroDeMedidasCUELLO">Cuello</label>
+                </div>
+
+                <div class="col-sm">
+                  <input type="number" class="form-control form-control-user" id="registroDeMedidasCADERAS">
+                  <label for="registroDeMedidasCADERAS">Caderas</label>
+                </div>
+
+                <div class="col-sm">
+                  <input type="number" class="form-control form-control-user" id="registroDeMedidasMUSCULO">
+                  <label for="registroDeMedidasMUSCULO">% Músculo</label>
+                </div>
+
+                <div class="col-sm">
+                  <input type="number" class="form-control form-control-user" id="registroDeMedidasGRASA">
+                  <label for="registroDeMedidasGRASA">% Grasa</label>
+                </div>
+              </div>
+              <a class="btn btn-outline-info btn-user btn-block">
+                Guardar nuevo
+              </a>
+            </div>
           </div>
           <!--------------------------------------------- TERMINA PANTALLA Registro de Medidas: --------------------------------------------->
 
@@ -239,7 +275,10 @@
 
           <!--------------------------------------------- COMIENZA PANTALLA Registro diario de consumo: --------------------------------------------->
           <div id="registroDiarioDeConsumo">
-            Esta es la pantalla de Registro diario de consumo:
+            <div class="container-fluid">
+              <h1 class="h1 mb-4 text-gray-800">Registro diario de Consumo</h1>
+              NO SE QUE PONER ACA
+            </div>
           </div>
           <!--------------------------------------------- TERMINA PANTALLA Registro diario de consumo: --------------------------------------------->
 
@@ -248,7 +287,71 @@
 
           <!--------------------------------------------- COMIENZA PANTALLA Gestión de productos/platillos: --------------------------------------------->
           <div id="gestionDeProductosPlatillos">
-            Esta es la pantalla de Gestión de productos/platillos:
+            <div class="container-fluid">
+              <h1 class="h1 mb-4 text-gray-800">Registro de Productos</h1>
+              <div class="form-group row">
+                <input type="date" class="form-control form-control-user" id="gestionDeProductosPlatillosCODIGO">
+                <label for="registroDeMedidasFECHA">Código de Barras</label>
+              </div>
+
+              <div class="form-group row">
+                <div class="col-sm">
+                  <input type="text" class="form-control form-control-user" id="gestionDeProductosPlatillosDESCRIPCION">
+                  <label for="registroDeMedidasCINTURA">Descripción</label>
+                </div>
+
+                <div class="col-sm">
+                  <input type="number" class="form-control form-control-user" id="gestionDeProductosPlatillosCUELLO">
+                  <label for="registroDeMedidasCUELLO">Tamaño de la porción</label>
+                </div>
+
+                <div class="col-sm">
+                  <input type="number" class="form-control form-control-user" id="gestionDeProductosPlatillosENERGIA">
+                  <label for="registroDeMedidasCADERAS">Energía</label>
+                </div>
+
+                <div class="col-sm">
+                  <input type="number" class="form-control form-control-user" id="gestionDeProductosPlatillosGRASA">
+                  <label for="registroDeMedidasMUSCULO">Grasa</label>
+                </div>
+
+                <div class="col-sm">
+                  <input type="number" class="form-control form-control-user" id="gestionDeProductosPlatillosSODIO">
+                  <label for="registroDeMedidasGRASA">Sodio</label>
+                </div>
+              </div>
+
+              <div class="form-group row">
+                <div class="col-sm">
+                  <input type="text" class="form-control form-control-user" id="gestionDeProductosPlatillosCARBOHIDRATOS">
+                  <label for="registroDeMedidasCINTURA">Carbohidratos</label>
+                </div>
+
+                <div class="col-sm">
+                  <input type="number" class="form-control form-control-user" id="gestionDeProductosPlatillosPROTEINA">
+                  <label for="registroDeMedidasCUELLO">Proteína</label>
+                </div>
+
+                <div class="col-sm">
+                  <input type="number" class="form-control form-control-user" id="gestionDeProductosPlatillosVITAMINAS">
+                  <label for="registroDeMedidasCADERAS">Vitaminas</label>
+                </div>
+
+                <div class="col-sm">
+                  <input type="number" class="form-control form-control-user" id="gestionDeProductosPlatillosCALCIO">
+                  <label for="registroDeMedidasMUSCULO">Calcio</label>
+                </div>
+
+                <div class="col-sm">
+                  <input type="number" class="form-control form-control-user" id="gestionDeProductosPlatillosHIERRO">
+                  <label for="registroDeMedidasGRASA">Hierro</label>
+                </div>
+              </div>
+
+              <a class="btn btn-outline-info btn-user btn-block">
+                Guardar nuevo
+              </a> <br><br><br><br><br>
+            </div>
           </div>
           <!--------------------------------------------- TERMINA PANTALLA Gestión de productos/platillos: --------------------------------------------->
 
@@ -257,7 +360,43 @@
 
           <!--------------------------------------------- COMIENZA PANTALLA Gestión de Recetas:  --------------------------------------------->
           <div id="gestionDeRecetas">
-            Esta es la pantalla de Gestión de Recetas:
+            <div class="container-fluid">
+              <h1 class="h1 mb-4 text-gray-800">Gestión de Recetas</h1>
+              <div class="form-group row">
+                <input type="date" class="form-control form-control-user" id="registroDeMedidasFECHA">
+                <label for="registroDeMedidasFECHA">Fecha</label>
+              </div>
+
+              <div class="form-group row">
+                <div class="col-sm">
+                  <input type="number" class="form-control form-control-user" id="registroDeMedidasCINTURA">
+                  <label for="registroDeMedidasCINTURA">Cintura</label>
+                </div>
+
+                <div class="col-sm">
+                  <input type="number" class="form-control form-control-user" id="registroDeMedidasCUELLO">
+                  <label for="registroDeMedidasCUELLO">Cuello</label>
+                </div>
+
+                <div class="col-sm">
+                  <input type="number" class="form-control form-control-user" id="registroDeMedidasCADERAS">
+                  <label for="registroDeMedidasCADERAS">Caderas</label>
+                </div>
+
+                <div class="col-sm">
+                  <input type="number" class="form-control form-control-user" id="registroDeMedidasMUSCULO">
+                  <label for="registroDeMedidasMUSCULO">% Músculo</label>
+                </div>
+
+                <div class="col-sm">
+                  <input type="number" class="form-control form-control-user" id="registroDeMedidasGRASA">
+                  <label for="registroDeMedidasGRASA">% Grasa</label>
+                </div>
+              </div>
+              <a class="btn btn-outline-info btn-user btn-block">
+                Guardar nuevo
+              </a>
+            </div>
           </div>
           <!--------------------------------------------- TERMINA PANTALLA Gestión de Recetas:  --------------------------------------------->
 
@@ -267,7 +406,43 @@
 
           <!--------------------------------------------- COMIENZA PANTALLA Reporte de Avance:  --------------------------------------------->
           <div id="reporteDeAvances">
-            Esta es la pantalla de Reporte de Avance:
+            <div class="container-fluid">
+              <h1 class="h1 mb-4 text-gray-800">Registro diario de Consumo</h1>
+              <div class="form-group row">
+                <input type="date" class="form-control form-control-user" id="registroDeMedidasFECHA">
+                <label for="registroDeMedidasFECHA">Fecha</label>
+              </div>
+
+              <div class="form-group row">
+                <div class="col-sm">
+                  <input type="number" class="form-control form-control-user" id="registroDeMedidasCINTURA">
+                  <label for="registroDeMedidasCINTURA">Cintura</label>
+                </div>
+
+                <div class="col-sm">
+                  <input type="number" class="form-control form-control-user" id="registroDeMedidasCUELLO">
+                  <label for="registroDeMedidasCUELLO">Cuello</label>
+                </div>
+
+                <div class="col-sm">
+                  <input type="number" class="form-control form-control-user" id="registroDeMedidasCADERAS">
+                  <label for="registroDeMedidasCADERAS">Caderas</label>
+                </div>
+
+                <div class="col-sm">
+                  <input type="number" class="form-control form-control-user" id="registroDeMedidasMUSCULO">
+                  <label for="registroDeMedidasMUSCULO">% Músculo</label>
+                </div>
+
+                <div class="col-sm">
+                  <input type="number" class="form-control form-control-user" id="registroDeMedidasGRASA">
+                  <label for="registroDeMedidasGRASA">% Grasa</label>
+                </div>
+              </div>
+              <a class="btn btn-outline-info btn-user btn-block">
+                Guardar nuevo
+              </a>
+            </div>
           </div>
           <!--------------------------------------------- TERMINA PANTALLA Reporte de Avance:  --------------------------------------------->
 
